src/objects/JF1646_ChildObject__c.object
<CustomObject>
    <fields>
        <fullName>ChildNumber__c</fullName>
        <label>ChildNumber</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChildText__c</fullName>
        <label>ChildText</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LookupRelationshipField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field represent a lookup relationship from &quot;JF1646_ChildObject__c&quot; to &quot;JF1646_ParentObject__c&quot;</description>
        <label>LookupRelationshipField</label>
        <referenceTo>JF1646_ParentObject__c</referenceTo>
        <relationshipLabel>JF1646_ChildObjects (LookupRelationshipField)</relationshipLabel>
        <relationshipName>LookupChildRelationshipName</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MasterDetailRelationshipField__c</fullName>
        <label>JF1646_ParentObject</label>
        <referenceTo>JF1646_ParentObject__c</referenceTo>
        <relationshipLabel>JF1646_ChildObjects</relationshipLabel>
        <relationshipName>JF1646_ChildObjects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PresentableChildName__c</fullName>
        <description>Unique child identifier</description>
        <label>PresentableChildName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>JF1646_ChildObject</label>
    <nameField>
        <label>JF1646_ParentObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JF1646_ChildObjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>